--- a/website/public/static/locales/zh/common.json
+++ b/website/public/static/locales/zh/common.json
@@ -2,5 +2,7 @@
   "Home": "主頁",
   "Test": "測試",
   "About": "關於",
-  "TestHome": "測試首頁"
+  "TestHome": "測試首頁",
+  "Login": "登錄",
+  "loginViaFacebook": "通過 Facebook 登錄"
 }
