Update website, remove about and test pages, config for header

--- a/website/public/static/locales/en/common.json
+++ b/website/public/static/locales/en/common.json
@@ -1,8 +1,5 @@
 {
-  "Home": "Home",
-  "Test": "Test",
-  "About": "About",
-  "TestHome": "Test Home",
-  "Login": "Log In",
-  "loginViaFacebook": "Login via Facebook"
+  "loginViaFacebook": "Login via Facebook",
+  "headerHomePage": "HomePage",
+  "headerLoginPage" : "Login Page"
 }
