Update website, make use of all the actions creators

--- a/website/public/static/locales/en/common.json
+++ b/website/public/static/locales/en/common.json
@@ -22,6 +22,9 @@
         "emailNotValid": "Email is not valid",
         "passwordRequired": "Password is required"
       },
+      "general": {
+        "loginSuccess": "Login Success."
+      },
       "errors": {
         "ex_incorrect_password": "Wrong password.",
         "ex_cannot_find_user": "No user record, please create an account first."
