Update website, add more error messages for login

--- a/website/public/static/locales/en/common.json
+++ b/website/public/static/locales/en/common.json
@@ -27,7 +27,9 @@
       },
       "errors": {
         "ex_incorrect_password": "Wrong password.",
-        "ex_cannot_find_user": "No user record, please create an account first."
+        "ex_cannot_find_user": "No user record, please create an account first.",
+        "ex_user_not_exists": "No user record, please create an account first.",
+        "ex_user_already_exists": "User already exists, please login"
       }
     },
     "common": {
