--- a/website/public/static/locales/zh/common.json
+++ b/website/public/static/locales/zh/common.json
@@ -27,7 +27,9 @@
       },
       "errors": {
         "ex_incorrect_password": "密碼錯誤，請重試",
-        "ex_cannot_find_user": "該電郵尚未登記，請先新建賬戶"
+        "ex_cannot_find_user": "該電郵尚未登記，請先新建賬戶",
+        "ex_user_not_exists": "該電郵尚未登記，請先新建賬戶",
+        "ex_user_already_exists": "該電郵已注冊，請登錄"
       }
     },
     "common": {
