--- a/website/public/static/locales/zh/common.json
+++ b/website/public/static/locales/zh/common.json
@@ -31,7 +31,8 @@
       "verifyCode": "驗證碼:",
       "getVerifyCode": "接收驗證碼",
       "password": "密碼:",
-      "confirmPassword": "密碼確認:"
+      "confirmPassword": "密碼確認:",
+      "backToLogin": "回登錄頁"
     }
   },
   "messages": {
@@ -69,6 +70,7 @@
         "ex_no_password": "請提供密碼.",
         "ex_no_username": "請提供用戶.",
         "ex_user_already_exists": "該電郵已注冊，請登錄",
+        "ex_wrong_verifyCode": "驗證碼錯誤",
         "activateFail": "賬戶激活失敗，請稍後重試"
       }
     },
