Update website, testing fetching data in store

--- a/website/public/static/locales/en/common.json
+++ b/website/public/static/locales/en/common.json
@@ -48,7 +48,8 @@
       "errors": {
         "ex_incorrect_password": "Wrong password.",
         "ex_cannot_find_user": "No user record, please create an account first.",
-        "ex_user_not_exists": "No user record, please create an account first."
+        "ex_user_not_exists": "No user record, please create an account first.",
+        "ex_not_authenticated": "Not authenticated yet. Please try later."
       }
     },
     "register": {
