--- a/website/public/static/locales/en/common.json
+++ b/website/public/static/locales/en/common.json
@@ -3,7 +3,8 @@
     "homePage": "Home Page",
     "loginPage": "Login Page",
     "registerPage": "Register Page",
-    "forgetPasswordPage": "Forget Password Page"
+    "forgetPasswordPage": "Forget Password Page",
+    "profilePage": "Profile Page"
   },
   "pages": {
     "login": {
