--- a/website/public/static/locales/zh/common.json
+++ b/website/public/static/locales/zh/common.json
@@ -9,6 +9,12 @@
     "editBlogPage": "編輯blog頁"
   },
   "pages": {
+    "layout": {
+      "profileManagement": "個人資料管理",
+      "postBlog": "發Blog",
+      "blogsManagement": "管理Blog",
+      "logOut": "登出"
+    },
     "login": {
       "iblogLogin": "iBlog 登錄",
       "email": "電郵:",
@@ -46,7 +52,7 @@
       "username": "用戶名:",
       "description": "個人描述:",
       "updateProfile": "更新個人資料",
-      "logOut": "退出",
+      "logOut": "登出",
       "uploadImage": "上傳照片",
       "updateImage": "更新照片"
     },
@@ -56,6 +62,14 @@
     }
   },
   "messages": {
+    "layout": {
+      "switchMode": "切換日間/夜間模式",
+      "chooseMainTheme": "選擇主題",
+      "switchLanguage": "語言切換",
+      "viewSourceCode": "瀏覽源碼",
+      "action": "操作",
+      "logIn": "登錄"
+    },
     "login": {
       "form": {
         "emailRequired": "請填好電郵地址",
