Update website, react quill studying

--- a/website/public/static/locales/en/common.json
+++ b/website/public/static/locales/en/common.json
@@ -158,6 +158,7 @@
     },
     "blog": {
       "form": {
+        "titlePlaceHolder": "Set blog title here...",
         "titleRequired": "Title is required"
       },
       "general": {
