Update website, change layout and style for blog creating

--- a/website/public/static/locales/en/common.json
+++ b/website/public/static/locales/en/common.json
@@ -58,6 +58,7 @@
     },
     "blog": {
       "postBlog": "Post Blog",
+      "discard": "Discard",
       "saveAsDraft": "Save As Draft",
       "publish": "Publish Blog",
       "like": "Like the blog",
